# account-switcher

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
docs/specs/: account-switcher-v1.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/account/: error.rs  mod.rs  model.rs  service.rs  store.rs
src-tauri/src/adapter/: claude.rs  codex.rs  env_hygiene.rs  mod.rs
src-tauri/src/config_writer/: claude.rs  codex.rs  mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/prefs/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/token_usage/: claude_transcripts.rs  codex_transcripts.rs  mod.rs
src-tauri/src/usage/: mod.rs
src/components/account-sidebar/: AccountFormDialog.tsx  AccountSidebar.tsx
src/components/terminal-tabs/: TerminalTabs.tsx  TerminalView.tsx  terminal.css
src/components/ui/: EyeToggle.tsx
src/components/updater/: UpdateChecker.tsx
src/components/usage-dashboard/: UsageDashboard.tsx
src/hooks/: useAccounts.ts  useTokenUsage.ts
src/lib/: api.ts  format.ts  types.ts  updater.ts
src/styles/: global.css
