[package]
name = "account-switcher"
version = "0.1.0"
description = "热切换 Claude Code / Codex 多账号配置的桌面应用"
authors = ["shixusheng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# `_lib` 后缀避免与 bin 同名冲突（Windows 限制，见 rust-lang/cargo#8519）
name = "account_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# 系统钥匙串：macOS Keychain / Windows Credential Manager
keyring = { version = "3", features = ["apple-native", "windows-native"] }
# 跨平台伪终端（内嵌终端会话）
portable-pty = "0.9"
# 原生对话框（项目目录选择）
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
